feat: [CDS-41772]: Add ManifestsStepV2